--- a/will_of_the_prophets/templates/will_of_the_prophets/board/board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/board/board.html
@@ -1,13 +1,13 @@
 {% load static %}
 
-<div class="starfield border border-orange">
+<div class="starfield board border border-orange">
     <div class="row no-gutters">
         {% for square in squares %}
     
             <div class="col rounded square
                 {% if square.is_current_position %}square-current{% endif %}
-                {% if square.special %}
-                    square-special
+                {% if square.special or square.butthole_start %}
+                    square-bg-contain
                 {% else %}
                     {% if square.number|divisibleby:2 %}
                         square-red
@@ -15,18 +15,22 @@
                         square-green
                     {% endif %}
                 {% endif %}
-                {% if square.butthole_start %}square-butthole-start{% endif %}
                 {% if square.butthole_end %}square-butthole-end{% endif %}
-                ">
-                <p class="number">{{ square.number }}</p>
+                "
+                {% if square.special or square.butthole_start %}
+                    style="background-image:
+                    {% if square.special %}
+                        url('/{{ square.special.image.url }}')
+                    {% endif %}
+                    {% if square.butthole_start %}
+                        url('{% static 'will_of_the_prophets/butthole_start.png' %}')
+                    {% endif %}
+                    ;"
+                {% endif %}
+                >
+                <p class="square-number">{{ square.number }}</p>
                 {% if square.is_current_position %}
                     <img class="img-runabout img-fluid" src="{% static 'will_of_the_prophets/runabout.png' %}" alt="Runabout"/>
-                {% endif %}
-                {% if square.special %}
-                    <img class="img-special img-fluid" src="{{ square.special.image.url }}" alt="{{ square.special.name }}"/>
-                {% endif %}
-                {% if square.butthole_start %}
-                    <img class="img-butthole-start img-fluid" src="{% static 'will_of_the_prophets/butthole_start.png' %}" alt="Butthole to {{ square.butthole_start.end_square }}"/>
                 {% endif %}
                 {% if square.butthole_end %}
                     <img class="img-butthole-end img-fluid" src="{% static 'will_of_the_prophets/butthole_end.png' %}" alt="Butthole from {{ square.butthole_end.start_square }}"/>
