--- a/will_of_the_prophets/static/will_of_the_prophets/style.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/style.scss
@@ -1,39 +1,67 @@
 @charset "utf-8";
 
 $orange: #fd7e14;
-
+$green: #278063;
+$red: #883829;
+$blue: #00C3FC;
 $body-bg: #000;
 $body-color: #fff;
 $border-color: $orange;
-$border-width: 10px;
+$border-width: 2px;
+$font-family-sans-serif: 'Arial Narrow', 'HelveticaNeue-CondensedBold', 'Helvetica Neue';
+$headings-font-family: 'Federation';
+$h1-font-size: 3.5rem;
+$line-height-base: 1;
+$headings-line-height: 0.9;
+
+$board-padding: 10px;
+$square-margin: 5px;
 
 @import "bootstrap/bootstrap";
 
-$board-widths: (
-  sm: map-get($grid-breakpoints, 'sm'),
-  md: map-get($grid-breakpoints, 'md'),
-  lg: map-get($grid-breakpoints, 'lg') * .8333,
-  xl: map-get($grid-breakpoints, 'xl') * .8333,
-);
+@each $color, $value in $colors {
+  .text-#{$color} {
+    color: $value;
+  }
+}
 
 .starfield {
   background-image: url('/static/will_of_the_prophets/starfield.png');
   background-size: cover;
 }
 
+$board-widths: (
+  sm: map-get($grid-breakpoints, 'sm') * .833333,
+  md: map-get($grid-breakpoints, 'md') * .833333,
+  lg: map-get($grid-breakpoints, 'lg') * .833333,
+  xl: map-get($grid-breakpoints, 'xl') * .833333,
+);
+
+.board {
+  padding: $board-padding;
+  white-space: nowrap;
+}
+
+.square {
+  margin: $square-margin;
+}
 
 @each $breakpoint, $board-width in $board-widths {
+  $row-width: $board-width - $grid-gutter-width * 2 - $border-width * 2 - $board-padding * 2;
+  $square-dimension: ($row-width - $square-margin * 20) / 10;
   @include media-breakpoint-up($breakpoint) {
     .square {
-      height: ($board-width - $border-width * 2) / 10 !important;
-      min-width: ($board-width - $border-width * 2) / 10 !important;
+      height: $square-dimension;
+      width: $square-dimension;
+    }
+    .square-number {
+      line-height: 0;
+      padding-top: $square-dimension / 2;
+      font-size: $square-dimension / 2;
+      text-align: center;
     }
   }
 }
-
-
-
-
 
 .square img {
   width: 100%;
@@ -48,3 +76,10 @@ $square-bg-transparency: 0.2;
 .square-red {
   background-color: transparentize($red, $square-bg-transparency);
 }
+
+.square-bg-contain {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
