--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row">
+
+<div class="row pt-3">
     <div class="col-10">
-    {{ board }}
+        <p class="h3 text-orange">The Greatest Generation Presents</p>
+        <h1 class="text-blue">Game of Buttholes:<br>The Will of the Prophets</h1>
+        {{ board }}
     </div>
     <div class="col-2">
         <dl>
             {% for special_square_type in special_square_types %}
-                <dt>
+                <dt class="text-uppercase">
                     <img class="img-special img-fluid" src="{{ special_square_type.image.url }}" alt="{{ special_square_type.name }}"/>
                     {{ special_square_type.name }}
                 </dt>
-                <dd>{{ special_square_type.description }}</dd>
+                <dd class="text-blue text-uppercase">{{ special_square_type.description }}</dd>
             {% endfor %}
         </dl>
     </div>
+</div>
+
 {% endblock %}
