--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -3,22 +3,24 @@
 {% block content %}
 
 <div class="row pt-3">
-    <div class="col-10">
+    <div class="col-9">
         <p class="h3 text-orange">The Greatest Generation Presents</p>
         <h1 class="text-blue">Game of Buttholes:<br>The Will of the Prophets</h1>
         {{ board }}
     </div>
-    <div class="col-2">
-        <dl>
-            {% for special_square_type in special_square_types %}
-                <dt class="text-uppercase">
-                    <img class="img-special img-fluid" src="{{ special_square_type.image.url }}" alt="{{ special_square_type.name }}"/>
-                    {{ special_square_type.name }}
-                </dt>
-                <dd class="text-blue text-uppercase">{{ special_square_type.description }}</dd>
-            {% endfor %}
-        </dl>
-    </div>
+    <aside class="col-3">
+        {% for special_square_type in special_square_types %}
+            <div class="row pb-3">
+                <div class="col-4">
+                    <img class="img-fluid" src="{{ special_square_type.image.url }}" alt="{{ special_square_type.name }}"/>
+                </div>
+                <div class="col-8">
+                    <h4 class="text-uppercase text-font-normal mb-0">{{ special_square_type.name }}</h6>
+                    <p class="text-blue text-uppercase h5 text-font-normal ">{{ special_square_type.description }}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </aside>
 </div>
 
 {% endblock %}
