--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -7,6 +7,21 @@
         <p class="h3 text-orange">The Greatest Generation Presents</p>
         <h1 class="text-blue">Game of Buttholes:<br>The Will of the Prophets</h1>
         {{ board }}
+        <footer class="pt-3">
+            <p>
+                Game of Buttholes: The Will of the Prophets is a board game
+                played by the hosts of
+                <a href="http://gagh.biz">The Greatest Generation</a>, a
+                Star Trek podcast by two guys who are a bit embarrassed to have
+                a Star Trek podcast.
+                Illustration and design by
+                <a href="http://www.sobreiro.com">Felipe Sobreiro</a>.
+                Code by <a href="http://craiga.id.au">Craig Anderson</a>.
+                Hosting provided by <a href="http://uhf62.co.uk">UHF 62</a>.
+                <a href="https://github.com/craiga/will-of-the-prophets">Source code is available
+                    on GitHub</a>.
+            </p>
+        </footer>
     </div>
     <aside class="col-3">
         {% for special_square_type in special_square_types %}
