Ensure roundabout appears on top of other squares

--- a/will_of_the_prophets/static/will_of_the_prophets/style.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/style.scss
@@ -86,3 +86,8 @@ $square-bg-transparency: 0.2;
 .text-font-normal {
   font-family: $font-family-sans-serif;
 }
+
+.img-runabout {
+  z-index: 50;
+  position: relative;
+}
