--- a/will_of_the_prophets/templates/registration/login.html
+++ b/will_of_the_prophets/templates/registration/login.html
@@ -36,11 +36,11 @@
             <div class="form-row">
                 <div class="form-group col-sm-6">
                     {{ form.username.label_tag }}
-                    {{ form.username|add_class:'form-control'|attr:'placeholder:Username' }}
+                    {{ form.username|add_class:'form-control' }}
                 </div>
                 <div class="form-group col-sm-6">
                     {{ form.password.label_tag }}
-                    {{ form.password|add_class:'form-control'|attr:'placeholder:Username' }}
+                    {{ form.password|add_class:'form-control' }}
                 </div>
             </div>
             <div class="form-row">
