--- a/will_of_the_prophets/templates/will_of_the_prophets/roll.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll.html
@@ -36,7 +36,7 @@
                 <strong class="text-orange">{{ last_roll.number }}</strong>.
                 It will appear on the site at
                 <strong class="text-blue">{{ last_roll.embargo }}</strong>.</p>
-            <p class="mb-0">To delete or edit this (or any other) roll, <a href="/admin/">use the admin site</a>!</p>
+            <p class="mb-0">To delete or edit this (or any other) roll, <a href="/admin/will_of_the_prophets/roll/">use the admin site</a>!</p>
         </div>
         {% for special_square_type in special_square_types %}
             <div class="row pt-3">
