--- a/will_of_the_prophets/static/will_of_the_prophets/style.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/style.scss
@@ -104,3 +104,11 @@ $square-bg-transparency: 0.2;
   width: 66%;
   position: relative;
 }
+
+.butthole {
+  z-index: 400;
+}
+
+.above-butthole {
+  z-index: 500;
+}
