--- a/will_of_the_prophets/templates/will_of_the_prophets/board/board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/board/board.html
@@ -6,6 +6,9 @@
     
             <div class="col rounded square
                 {% if square.is_current_position %}square-current{% endif %}
+                {% if square.butthole_start %}
+                    above-butthole
+                {% endif %}
                 {% if square.special or square.butthole_start %}
                     square-bg-contain
                 {% else %}
