--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -3,7 +3,7 @@
 
 <html>
     <head>
-        <title>{{ title }}</title>
+        <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
         <style>
             @font-face {
                 font-family: 'Federation';
