--- a/will_of_the_prophets/templates/will_of_the_prophets/roll.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 
+{% block title %}You're required to learn as you play … roll{% endblock %}
+
 {% block content %}
 
 <div class="row pt-3">
