--- a/will_of_the_prophets/templates/will_of_the_prophets/board/board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/board/board.html
@@ -5,9 +5,14 @@
         {% for square in squares %}
 
             <div class="col rounded square
-                {% if square.is_current_position %}square-current{% endif %}
+                {% if square.is_current_position %}
+                    above-butthole
+                {% endif %}
                 {% if square.butthole_start %}
                     above-butthole
+                {% endif %}
+                {% if square.special and square.is_current_position %}
+                    border border-white
                 {% endif %}
                 {% if square.special or square.butthole_start %}
                     square-bg-contain
@@ -42,7 +47,7 @@
                 {% endif %}
                 >
                 {% if square.is_current_position %}
-                    <img class="img-runabout img-fluid" src="{% static 'will_of_the_prophets/runabout.png' %}" alt="Runabout"/>
+                    <img class="img-runabout img-fluid above-butthole" src="{% static 'will_of_the_prophets/runabout.png' %}" alt="Runabout"/>
                 {% endif %}
                 <p class="square-number
                     {% if square.special or square.butthole_start or square.is_current_position %}
