Links should break out of iframe

--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -11,13 +11,13 @@
             <p>
                 Game of Buttholes: The Will of the Prophets is a board game
                 played by the hosts of
-                <a href="http://gagh.biz">The Greatest Generation</a>, a
+                <a href="http://gagh.biz" target="_top">The Greatest Generation</a>, a
                 Star Trek podcast by two guys who are a bit embarrassed to have
                 a Star Trek podcast.
                 Illustration and design by
-                <a href="http://www.sobreiro.com">Felipe Sobreiro</a>.
-                Code by <a href="http://craiga.id.au">Craig Anderson</a>.
-                <a href="https://github.com/craiga/will-of-the-prophets">Source code available
+                <a href="http://www.sobreiro.com" target="_top">Felipe Sobreiro</a>.
+                Code by <a href="http://craiga.id.au" target="_top">Craig Anderson</a>.
+                <a href="https://github.com/craiga/will-of-the-prophets" target="_top">Source code available
                     on GitHub</a>.
             </p>
         </footer>
