Adding roll frequency page

--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -7,20 +7,7 @@
         <p class="h3 text-orange">The Greatest Generation Presents</p>
         <h1 class="text-blue">Game of Buttholes:<br>The Will of the Prophets</h1>
         {{ board }}
-        <footer class="pt-3">
-            <p>
-                Game of Buttholes: The Will of the Prophets is a board game
-                played by the hosts of
-                <a href="http://gagh.biz" target="_top">The Greatest Generation</a>, a
-                Star Trek podcast by two guys who are a bit embarrassed to have
-                a Star Trek podcast.
-                Illustration and design by
-                <a href="http://www.sobreiro.com" target="_top">Felipe Sobreiro</a>.
-                Code by <a href="http://craiga.id.au" target="_top">Craig Anderson</a>.
-                <a href="https://github.com/craiga/will-of-the-prophets" target="_top">Source code available
-                    on GitHub</a>.
-            </p>
-        </footer>
+        {% include "will_of_the_prophets/_footer.html" %}
     </div>
     <aside class="col-lg-3">
         <div class="row">
